Brainstorm flowchart. Chapter introduction drafts.

--- a/Articles/ratings_QCA/IMF_Rating.org
+++ b/Articles/ratings_QCA/IMF_Rating.org
@@ -510,7 +510,7 @@ rating.to_csv('./data/rating_fulldataset_numeric.csv')
 :end:
 
 
-** Computing average rate and rename variables
+** Filtering prime rates
 
 * Merging datasets
 
